# phiUi

./: CMakeLists.txt  README.md  platformio.ini
include/: phi.cpp  phi.h  test_layout.cpp
include/common/: common.h  containers.cpp  containers.h  options.h
include/renderer/: desktop.cpp  desktop.h  renderer.h  renderer_base.h  u8g2_plugin.cpp  u8g2_plugin.h
include/skins/: default.cpp  default.h  increment_counter.h  skins_common.h
include/state/: state.cpp  state.h
include/widgets/: widgets.cpp  widgets.h
lib/common/: phi_common.h  phi_containers.h  phi_options.h  phi_renderer.h
lib/phi/: phi.cpp  phi.h
lib/renderer/: desktop_plugin.cpp  desktop_plugin.h  renderer_base.h  u8g2_plugin.cpp  u8g2_plugin.h
lib/skins/: default_skin.cpp  default_skin.h  skins_common.h
lib/state/: state.cpp  state.h
lib/widgets/: widgets.h
src/: custom_options.h  desktop_test.cpp
src/layout/: test_layout.h
